--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ section {
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
+  transition: 1s;
+  transition-timing-function: ease-out;
 }
 .grid2 {
   grid-column: 2;
@@ -107,4 +109,34 @@ h1 span {
 }
 .grid4 .media li a:hover {
   color: #475745;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    font-size: 15px;
+  }
+  section {
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-flow: row wrap;
+  }
+  .grid1 {
+    position: unset;
+  }
+  .grid1 img {
+    left: 50%;
+    top: 0;
+    transform: translate(-50%, -50%);
+    transition: 1s;
+    transition-timing-function: ease-out;
+  }
+  .grid2 {
+    width: 100%;
+    text-align: center;
+    padding-top: 100px;
+  }
+  .grid4 {
+    width: 100%;
+  }
 }
