--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ h1 span {
   }
   section {
     width: 100%;
+    margin-top: 200px;
     height: auto;
     display: flex;
     flex-flow: row wrap;
